# iotedge

edgelet/: Cargo.toml
snap/: snapcraft.yaml
snap/hooks/: configure
