[workspace]
members = [
    "aziot-edged",
    "docker-rs",
    "edgelet-core",
    "edgelet-docker",
    "edgelet-http",
    "edgelet-http-mgmt",
    "edgelet-http-workload",
    "edgelet-image-cleanup",
    "edgelet-settings",
    "edgelet-utils",
    "iotedge",
    "support-bundle",
]

# dirty hack here as cargo insists patches refer to different URLs, but we really want the same URL
# but a different branch. So we put www in to trick cargo. Yes, it is gross
[patch.'https://github.com/Azure/iot-identity-service']
aziotctl-common = { git = 'https://www.github.com/Azure/iot-identity-service', branch = 'feature/snapping' }
aziot-certd-config = { git = 'https://www.github.com/Azure/iot-identity-service', branch = 'feature/snapping' }
aziot-identity-common = { git = 'https://www.github.com/Azure/iot-identity-service', branch = 'feature/snapping' }
aziot-identityd-config = { git = 'https://www.github.com/Azure/iot-identity-service', branch = 'feature/snapping' }
aziot-key-common = { git = 'https://www.github.com/Azure/iot-identity-service', branch = 'feature/snapping' }
aziot-keyd-config = { git = 'https://www.github.com/Azure/iot-identity-service', branch = 'feature/snapping' }
aziot-keys-common = { git = 'https://www.github.com/Azure/iot-identity-service', branch = 'feature/snapping' }
cert-renewal = { git = 'https://www.github.com/Azure/iot-identity-service', branch = 'feature/snapping' }

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
